Fixed overflowing issue

--- a/app/styles.css
+++ b/app/styles.css
@@ -55,6 +55,8 @@ html, body {
   padding: 0;
   border: 0;
   height: 100%;
+
+  overflow: hidden;
 }
 body {
   display: flex;
